--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,46 @@ header {
 
 .container {
     display: flex;
-    
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .container img {
     height: 300px;
     max-width: 300px;
+}
+
+.dog {
+    width: 350px;
+
+
+}
+
+.dog ul {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+div li {
+    background-color: #89DEEF;
+    border-radius: 15px;
+    padding: 5px;
+    /* display: flex; */
+    margin-bottom: 5px;
+    margin-right: 5px;
+
+}
+
+footer {
+    display: flex;
+    text-align: justify;
+    align-items: stretch;
+}
+
+.foot {
+    height: 300px;
+    width: 300px;
+
 }
